--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<!-- top navbar is shown only when user is logger in -->
+<div>Top navbar</div>
+<div>
+    <!-- side menu bar is shown only when user is logger in (and we could add some other logic) -->
+    <div>Side menu bar</div>
+    <router-outlet></router-outlet>
+</div>
+
