top navbar mock

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- top navbar is shown only when user is logger in -->
-<div>Top navbar</div>
+<app-navbar></app-navbar>
 <div>
     <!-- side menu bar is shown only when user is logger in (and we could add some other logic) -->
     <div>Side menu bar</div>
