mocked sidemenu options

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- top navbar is shown only when user is logger in -->
 <app-navbar></app-navbar>
-<mat-sidenav-container>
+<mat-sidenav-container class="app-container">
     <!-- side menu bar is shown only when user is logger in (and we could add some other logic) -->
     <mat-sidenav #sidenav mode="side" [(opened)]="sidemenuOpened">
         <app-sidemenu></app-sidemenu>
