--- a/src/app/core/sidemenu/sidemenu.component.html
+++ b/src/app/core/sidemenu/sidemenu.component.html
@@ -1,1 +1,11 @@
-<p>sidemenu works!</p>
+<mat-selection-list #mainmenu [multiple]="false">
+    <mat-list-option value="home">
+        Home
+    </mat-list-option>
+    <mat-list-option value="adminarea">
+        Admin area
+    </mat-list-option>
+    <mat-list-option value="logout">
+        Logout
+    </mat-list-option>
+</mat-selection-list>
