working on login form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- top navbar is shown only when user is logger in -->
+<!-- top navbar is shown only when user is logged in -->
 <app-navbar></app-navbar>
 <mat-sidenav-container class="app-container">
     <!-- side menu bar is shown only when user is logger in (and we could add some other logic) -->
