--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+// default page styles
+.app-page
+    margin: 1rem
+
+.app-actions
+    margin: 1rem 0px
+    text-align: right
