--- a/src/app/core/sidemenu/sidemenu.component.html
+++ b/src/app/core/sidemenu/sidemenu.component.html
@@ -1,9 +1,12 @@
 <mat-selection-list #mainmenu [multiple]="false">
-    <mat-list-option value="home">
+    <mat-list-option value="home" routerLink="/">
         Home
     </mat-list-option>
     <mat-list-option value="adminarea">
         Admin area
+    </mat-list-option>
+    <mat-list-option value="login" routerLink="/signin">
+        Login
     </mat-list-option>
     <mat-list-option value="logout">
         Logout
