--- a/src/app/features/signin/login/signin-login.component.html
+++ b/src/app/features/signin/login/signin-login.component.html
@@ -1,3 +1,26 @@
-<p>login works!</p>
+<div class="app-page">
+    <h2>Sign in</h2>
+    <form #loginForm>
+        <mat-form-field>
+            <mat-label>Email</mat-label>
+            <input type="email" matInput [formControl]="emailFormControl" placeholder="johndoe@example.com">
+            <mat-hint>Hint here</mat-hint>
+            <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">Invalid email address</mat-error>
+            <mat-error *ngIf="emailFormControl.hasError('required')">Required</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input type="password" matInput [formControl]="passwordFormControl" placeholder="Type your password">
+            <mat-hint>Hint here</mat-hint>
+            <mat-error *ngIf="passwordFormControl.hasError('required')">Required</mat-error>
+        </mat-form-field>
+        <div class="app-actions">
+            <button
+                [disabled]="!loginForm.valid"
+                mat-raised-button
+                color="primary">Sign in</button>
+        </div>
+    </form>
+</div>
 <a routerLink="/signin/forgot-password">Forgot password?</a>
 <a routerLink="/dashboard">Log in</a>
