mocked dashboard page

--- a/src/app/features/dashboard/user/dashboard-user.component.html
+++ b/src/app/features/dashboard/user/dashboard-user.component.html
@@ -1,1 +1,20 @@
-<p>user dashboard works!</p>
+<div class="greeting">
+    <h1>Hello, user!</h1>
+    <p>Start here your experience</p>
+</div>
+<div class="app-page">
+    <mat-tab-group>
+        <mat-tab label="First">
+            <h2>First Title</h2>
+            <p>Lorem ipsum dolor sit amet...</p>
+        </mat-tab>
+        <mat-tab label="Second">
+            <h2>Second Title</h2>
+            <p>Lorem ipsum dolor sit amet...</p>
+        </mat-tab>
+        <mat-tab label="Third">
+            <h2>Third Title</h2>
+            <p>Lorem ipsum dolor sit amet...</p>
+        </mat-tab>
+    </mat-tab-group>
+</div>
