sidemenu items visible/hidden basing on authentication status

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <mat-sidenav-container class="app-container">
     <!-- side menu bar is shown only when user is logger in (and we could add some other logic) -->
     <mat-sidenav #sidenav mode="side" [(opened)]="sidemenuOpened">
-        <app-sidemenu></app-sidemenu>
+        <app-sidemenu [auth]="auth$"></app-sidemenu>
     </mat-sidenav>
     <mat-sidenav-content>
         <p><mat-checkbox [(ngModel)]="sidemenuOpened">sidenav.opened</mat-checkbox></p>
