--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- top navbar is shown only when user is logged in -->
 <div class="app-container">
-    <app-navbar></app-navbar>
+    <app-navbar [auth]="auth$"></app-navbar>
     <mat-sidenav-container class="app-flex-fill">
         <!-- side menu bar is shown only when user is logger in (and we could add some other logic) -->
         <mat-sidenav #sidenav mode="side" [(opened)]="sidemenuOpened" *ngIf="(auth$ | async).accessToken">
