done redux logout

--- a/src/app/core/sidemenu/sidemenu.component.html
+++ b/src/app/core/sidemenu/sidemenu.component.html
@@ -9,7 +9,7 @@
         <mat-list-option value="adminarea">
             Admin area
         </mat-list-option>
-        <mat-list-option value="logout">
+        <mat-list-option value="logout" (click)="logout();">
             Logout
         </mat-list-option>
     </ng-container>
