sidemenu toggle with sandwich botton in navbar

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button aria-label="menu icon">
+    <button mat-icon-button aria-label="menu icon" (click)="sidemenuToggle()">
         <fa-icon [icon]="faBars"></fa-icon>
     </button>
     <span>Real World App</span>
