--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div>
     <mat-card>
-        <mat-card-title>Users</mat-card-title>
+        <mat-card-title><a routerLink="users">Users</a></mat-card-title>
         <mat-card-content>
             Manage users
         </mat-card-content>
