--- a/src/app/features/admin/users/admin-users.component.html
+++ b/src/app/features/admin/users/admin-users.component.html
@@ -2,31 +2,5 @@
 <div>
     <button mat-raised-button disabled="disabled">Create</button>
 </div>
-<table mat-table [dataSource]="(users$ | async).items" class="mat-elevation-z8">
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
-    </ng-container>
-    <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef> Lastname </th>
-        <td mat-cell *matCellDef="let element"> {{ element.lastName }} </td>
-    </ng-container>
-    <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{ element.email }} </td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button aria-label="Edit" disabled="disabled">
-                <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-icon-button aria-label="Delete" disabled="disabled">
-                <mat-icon>delete</mat-icon>
-            </button>
-        </td>
-    </ng-container>
+<app-users-table [dataSource$]="users$"></app-users-table>
 
-    <tr mat-header-row *matHeaderRowDef="table.columns"></tr>
-    <tr mat-row *matRowDef="let row; columns: table.columns;"></tr>
-</table>
