--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-<!-- top navbar is shown only when user is logged in -->
-<div class="app-container">
-    <app-navbar [auth]="auth$" (sidemenuToggleEvent)="sidemenuToggle()"></app-navbar>
-    <mat-sidenav-container class="app-flex-fill">
-        <!-- side menu bar is shown only when user is logger in (and we could add some other logic) -->
-        <mat-sidenav #sidenav mode="side" [(opened)]="sidemenuOpened" *ngIf="(auth$ | async).accessToken">
-            <app-sidemenu [auth]="auth$"></app-sidemenu>
-        </mat-sidenav>
-        <mat-sidenav-content>
-            <router-outlet></router-outlet>
-        </mat-sidenav-content>
-    </mat-sidenav-container>
-</div>
+<mat-sidenav-container class="app-sidenav-container">
+    <mat-sidenav #sidenav mode="side" [(opened)]="sidemenuOpened" *ngIf="(auth$ | async).accessToken">
+        <app-sidemenu [auth]="auth$"></app-sidemenu>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <app-navbar [auth]="auth$" (sidemenuToggleEvent)="sidemenuToggle()"></app-navbar>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
