--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,7 +1,7 @@
-.app-container
-    height: 100%
-    display: flex
-    flex-direction: column
-
-.app-flex-fill
-    flex-grow: 99
+.app-sidenav-container
+    position: absolute
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+    background: #eee
