--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,11 @@
     <mat-sidenav #sidenav mode="side" [(opened)]="sidemenuOpened" *ngIf="(auth$ | async).accessToken">
         <app-sidemenu [auth]="auth$"></app-sidemenu>
     </mat-sidenav>
-    <mat-sidenav-content>
-        <app-navbar [auth]="auth$" (sidemenuToggleEvent)="sidemenuToggle()"></app-navbar>
-        <router-outlet></router-outlet>
+    <mat-sidenav-content class="app-page-container">
+        <div>
+            <app-navbar [auth]="auth$" (sidemenuToggleEvent)="sidemenuToggle()"></app-navbar>
+            <router-outlet></router-outlet>
+        </div>
+        <app-footer></app-footer>
     </mat-sidenav-content>
 </mat-sidenav-container>
