--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,3 +5,8 @@
     left: 0
     right: 0
     background: #eee
+
+.app-page-container
+    display: flex
+    flex-direction: column
+    justify-content: space-between
