--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -4,9 +4,12 @@
     bottom: 0
     left: 0
     right: 0
-    background: #eee
+    background: #ffffff
 
-.app-page-container
+.app-main-container
     display: flex
     flex-direction: column
     justify-content: space-between
+
+.app-page
+    padding: 0 16px 16px 16px
