--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,5 @@
-<mat-toolbar>
-    Footer here
-</mat-toolbar>
+<div class="app-footer">
+    <div>Left footer</div>
+    <div>Center footer</div>
+    <div>Right footer</div>
+</div>
